--- a/css/style.css
+++ b/css/style.css
@@ -7,17 +7,31 @@
 .footer .footer_top .footer_widget .newsletter_form button,
 .footer .socail_links ul li a:hover {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ff008c+0,ff6357+100 */
-  background: #ff008c;
+  background: #00AA13;
   /* Old browsers */
-  background: -moz-linear-gradient(left, #ff008c 0%, #ff6357 100%);
+  background: -moz-linear-gradient(left, #00AA13 0%, #02c219 100%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(left, #ff008c 0%, #ff6357 100%);
+  background: -webkit-linear-gradient(left, #00AA13 0%, #02c219 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, #ff008c 0%, #ff6357 100%);
+  background: linear-gradient(to right, #00AA13 0%, #02c219 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff008c', endColorstr='#ff6357', GradientType=1);
   /* IE6-9 */
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+.boxed-btn3:hover {
+  font-weight: bold;
+
+}
+
+.text a:hover {
+  background-color: #8af797 !important;
+}
+
 
 /* Normal desktop :1200px. */
 /* Normal desktop :992px. */
@@ -431,19 +445,18 @@ h3 {
   font-size: 14px;
   font-weight: 400;
   border: 0;
-  border: 1px solid #FF008C;
+  border: 1px solid #00aa13;
   letter-spacing: 3px;
   text-align: center;
-  color: #FF008C !important;
+  color: #00aa13 !important;
   text-transform: uppercase;
   cursor: pointer;
 }
 
 /* line 17, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_btn.scss */
 .boxed-btn:hover {
-  background: #FF008C;
-  color: #fff !important;
-  border: 1px solid #FF008C;
+  background: #00aa13 color: #fff !important;
+  border: 1px solid #00aa13;
 }
 
 /* line 22, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_btn.scss */
@@ -508,7 +521,7 @@ h3 {
   -o-transition: 0.3s;
   transition: 0.3s;
   display: inline-block;
-  color: #FF008C;
+  color: #00aa13;
 }
 
 /* line 77, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_btn.scss */
@@ -525,7 +538,7 @@ h3 {
 /* line 88, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_btn.scss */
 .boxed-btn4 {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#0181f5+0,5db2ff+100 */
-  background: #FF008C;
+  background: #00aa13;
   color: #fff;
   display: inline-block;
   padding: 14px 27px;
@@ -549,7 +562,7 @@ h3 {
 
 /* line 107, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_btn.scss */
 .boxed-btn4:hover {
-  background: #FF008C;
+  background: #00aa13;
   color: #fff !important;
 }
 
@@ -611,14 +624,14 @@ h3 {
 
 /* line 153, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_btn.scss */
 .boxed-btn3-green-2 {
-  color: #FF008C !important;
+  color: #00aa13 !important;
   display: inline-block;
   padding: 14px 31px;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 400;
   border: 0;
-  border: 1px solid #FF008C;
+  border: 1px solid #00aa13;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -634,7 +647,7 @@ h3 {
 
 /* line 169, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_btn.scss */
 .boxed-btn3-green-2:hover {
-  background: #FF008C;
+  background: #00AA13;
   color: #fff !important;
   border: 1px solid transparent;
 }
@@ -711,8 +724,8 @@ h3 {
 .line_btn {
   display: inline-block;
   font-size: 15px;
-  color: #FF008C;
-  border: 1px solid #FF008C;
+  color: #00AA13;
+  border: 1px solid #00AA13;
   text-transform: capitalize;
   padding: 13px 34px;
   font-weight: 600;
@@ -720,7 +733,7 @@ h3 {
 
 /* line 233, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_btn.scss */
 .line_btn:hover {
-  background: #FF008C;
+  background: #00AA13;
   color: #fff;
 }
 
@@ -1097,8 +1110,8 @@ h3 {
   padding: 12px 26px;
   font-size: 15px;
   font-weight: 500;
-  border: 1px solid #FF008C;
-  color: #FF008C;
+  border: 1px solid #00AA13;
+  color: #00AA13;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
@@ -1112,7 +1125,7 @@ h3 {
 .header-area .main-header-area .Appointment .book_btn a:hover {
   color: #fff;
   border: 1px solid transparent;
-  background: #FF008C;
+  background: #00AA13;
   color: #fff;
 }
 
@@ -1201,7 +1214,7 @@ h3 {
 
 /* line 184, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_header.scss */
 .header-area .main-header-area .main-menu ul li a:hover {
-  color: #FF008C;
+  color: #00aa13;
 }
 
 /* line 188, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_header.scss */
@@ -2327,7 +2340,7 @@ h3 {
 
 /* line 20, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
 .footer .pro_border .lets_projects h3 a {
-  color: #FF008C;
+  color: #00AA13;
 }
 
 /* line 25, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
@@ -2359,7 +2372,7 @@ h3 {
 
 /* line 39, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
 .footer .pro_border .phone_number a:hover {
-  color: #FF008C;
+  color: #00AA13;
 }
 
 /* line 45, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
@@ -2442,7 +2455,7 @@ h3 {
 
 /* line 87, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
 .footer .footer_top .footer_widget p a:hover {
-  color: #FF008C;
+  color: #00AA13;
 }
 
 /* line 93, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
@@ -2498,7 +2511,7 @@ h3 {
 
 /* line 131, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
 .footer .footer_top .footer_widget ul li a:hover {
-  color: #FF008C;
+  color: #00AA13;
 }
 
 /* line 137, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
@@ -2586,7 +2599,7 @@ h3 {
 
 /* line 199, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
 .footer .copy-right_text .copy_right a {
-  color: #FF008C;
+  color: #00AA13;
 }
 
 /* line 204, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_footer.scss */
@@ -2924,7 +2937,7 @@ h3 {
 
 /* line 230, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_bradcam.scss */
 .brad_cam_lists ul li:hover a {
-  color: #FF008C;
+  color: #00AA13;
 }
 
 /* line 235, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_bradcam.scss */
@@ -4005,7 +4018,7 @@ h3 {
 
 /* line 75, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_case_study.scss */
 .case_study_area .single_study .subheading h4 a:hover {
-  color: #FF008C;
+  color: #00aa13;
 }
 
 /* line 80, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_case_study.scss */
@@ -4029,7 +4042,7 @@ h3 {
 
 /* line 92, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_case_study.scss */
 .case_study_area .single_study .subheading.white_subheading h4 a:hover {
-  color: #FF008C;
+  color: #00aa13;
 }
 
 /* line 97, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_case_study.scss */
@@ -4095,19 +4108,21 @@ h3 {
 /* line 137, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_case_study.scss */
 .case_study_area .load_more .load_more_btn {
   display: inline-block;
-  color: #FF008C;
-  background: #FFF5FB;
+  color: #00aa13;
+  background: #ffffff;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
   padding: 13px 35px;
   font-size: 15px;
   font-weight: 500;
+  border: 1px solid #00aa13;
+  ;
 }
 
 /* line 145, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_case_study.scss */
 .case_study_area .load_more .load_more_btn:hover {
-  background: #FF008C;
+  background: #00aa13;
   color: #fff;
 }
 
@@ -5609,7 +5624,7 @@ h6 {
 /* line 14, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_blog.scss */
 .blog_area a:hover,
 .blog_area a :hover {
-  background: -webkit-linear-gradient(131deg, #FF008C 0%, #FF008C 99%);
+  background: -webkit-linear-gradient(131deg, #00AA13 0%, #00AA13 99%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-decoration: none;
@@ -6130,7 +6145,7 @@ h6 {
 
 /* line 544, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_blog.scss */
 .blog_details a:hover {
-  color: #FF008C;
+  color: #00aa13
 }
 
 /* line 549, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_blog.scss */
@@ -6199,12 +6214,18 @@ h6 {
   left: 10px;
   display: block;
   color: #fff;
-  background-color: #FF008C;
+  background-color: #00aa13;
   padding: 8px 15px;
   border-radius: 5px;
 }
 
-@media (min-width: 768px) {
+.blog_item_date:hover {
+  background-color: #00aa13 !important;
+  color: #ffff !important;
+}
+
+
+. @media (min-width: 768px) {
 
   /* line 599, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_blog.scss */
   .blog_item_img .blog_item_date {
@@ -6222,6 +6243,7 @@ h6 {
   margin-bottom: 0;
   line-height: 1.2;
 }
+
 
 @media (min-width: 768px) {
 
@@ -6430,7 +6452,7 @@ h6 {
 
 /* line 842, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_blog.scss */
 .blog_right_sidebar .tag_cloud_widget ul li a:hover {
-  background: #FF008C;
+  background: #00aa13;
   color: #fff !important;
   -webkit-text-fill-color: #fff;
   text-decoration: none;
@@ -6682,7 +6704,7 @@ h6 {
 
 /* line 1208, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_blog.scss */
 .single-post-area .blog-author a:hover {
-  color: #FF008C;
+  color: #00aa13;
 }
 
 /* line 1213, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_blog.scss */
@@ -7128,7 +7150,7 @@ h6 {
 
 /* line 72, ../../Arafath/CL/CL October/219. SEO/HTML/scss/_blog_part.scss */
 .blog_part .single-home-blog .card .card-body a {
-  color: #FF008C;
+  color: #00AA13;
   text-transform: uppercase;
   -webkit-transition: 0.8s;
   transition: 0.8s;
@@ -7155,7 +7177,7 @@ h6 {
   height: 10px;
   top: 5px;
   left: 0;
-  background-color: #FF008C;
+  background-color: #00AA13;
   border-radius: 50%;
 }
 
